--- a/car_manager/Manage.storyboard
+++ b/car_manager/Manage.storyboard
@@ -1059,7 +1059,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="carid" destination="F8B-Z6-K3R" id="Dat-4h-mXr"/>
+                        <outlet property="carIdTextfield" destination="F8B-Z6-K3R" id="FTi-aq-Ia3"/>
                         <outlet property="textfield" destination="fPS-7y-c9t" id="AgA-KQ-9N3"/>
                     </connections>
                 </viewController>
